# clib

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: cmake.yml
cmake/modules/: FindCheck.cmake
perf_tests/: CMakeLists.txt  perf_test_ghashtable.c
src/: garray.h  ghashtable.h  glist.h  gstring.h
tests/: CMakeLists.txt  test_garray.c  test_ghashtable.c  test_glist.c  test_gstring.c  test_integration.c
